Theorie, & Keffen es ist nen E-Feld, kein Magnetfeld du Horst

--- a/v503/content/durchfuehrung.tex
+++ b/v503/content/durchfuehrung.tex
@@ -1,14 +1,15 @@
 \section{Durchführung}
 \label{sec:Durchführung}
-In diesem Versuch wird versucht die Elementatladung $\epsilon_0$, sowie die Advogradokonstante $\symup{N}_{\text{A}}$ und die Faraday-Konstante zu bestimmen. Dies soll über die 
-\textit{Milikan Öltröpfchenmethode} geschehen. Dazu wird zunächst eine Messapparatur gemäß \autoref{fig:aufbau} verwendet. Die einzelnen Bauelemente werden in der Abbildung 
-mit der jeweiligen Nummer bezeichnet. Abstrakt beschrieben benötigt man für diesen Versuch lediglich einen Plattenkondensator, in welchem ein Magnetfeld erzeugt wird. Dieses 
-muss parallel zu Richtung der Gravitationskraft gerichtet sein. Die Kammer soll in dieser Durchführung mit Luft gefüllt sein. Oben im Plattenkondensator findet sich eine 
-Öffnung durch welche Öl in die Apparatur eingeführt werden kann. An der Seite des Plattenkondensators wird eine Halogenlampe verwendet, damit die Öltröpfchen sichtbarer werden.
-Unterhalb des Plattenkondensator befindet sich ein radioaktives $\alpha$-Präparat. Dieses kann über einen Hebel das Öl bestrahlen, um so die Ladung dieser Öltröpfchen zu
-verändern. Die \textit{"Kammer"} des Plattenkondensators kann über ein anliegendes Mikroskop beobachtet werden. Durch das Teleskop sind die Öltröpfchen mit einem Gitter im 
-Hintergrund zu sehen. Der Abstand zweier \textit{dicker} Linien beträgt $\qty{0.5}{\milli\metre}$. Der Abstand zweier \textit{dünner} Linien zueinander beträgt 
-$\qty{0.1}{\milli\metre}$. Damit das Öl in kleine Tröpfen aufgespalt wird, soll ein \textit{Zerstäuber} verwendet werden.
+Zur Bestimmung der Elementarladung $e$ mithilfe der Milikan-Metode wird ein Versuchsaufbau verwendet, der in \autoref{fig:aufbau} zu sehen ist. Die einzelnen Bauelemente werden in der Abbildung 
+mit der jeweiligen Nummer bezeichnet. Wie in \autoref{sec:Theorie} beschrieben wird ein Plattenkondensator zur Erzeugung eines elektrostatischen Feldes benötigt. Dieses 
+muss parallel zur Richtung der Gravitationskraft ausgerichtet sein. Der Experimentierraum ist mit Luft gefüllt. An der oberen Platte des Plattenkondensators befindet sich eine 
+Öffnung, durch welche Öl in die Apparatur verstäubt werden kann. An der Seite des Plattenkondensators ist eine Halogenlampe installiert, um die Öltröpfchen besser sichtbar zu 
+machen.
+Unterhalb des Plattenkondensator befindet sich ein radioaktives $\alpha$-Präparat. Dieses kann über einen Hebel das Öl bestrahlen, um die Öltröpfchen zu ionisieren, sollte 
+die Luftreibung nicht ausreichen, um eine Ladung der Tröpfchen zu erzeugen. Die Kammer des Plattenkondensators kann über ein anliegendes Mikroskop beobachtet werden. 
+Durch welches die Öltröpfchen und ein Maßstab-Gitter zu sehen sind.
+Der Abstand zweier \textit{dicker} Linien beträgt $\qty{0.5}{\milli\metre}$. Der Abstand zweier \textit{dünner} Linien zueinander beträgt 
+$\qty{0.1}{\milli\metre}$.
 
 \begin{figure}
     \centering
@@ -17,19 +18,21 @@ $\qty{0.1}{\milli\metre}$. Damit das Öl in kleine Tröpfen aufgespalt wird, sol
     \label{fig:aufbau}
 \end{figure}
 
-Zunächst wird damit begonnen die Messapparatur waagerecht aufzustellen, damit die Abweichungen dieser Quelle eleminiert werden können. Dann wird Apparatur angeschaltet. Es 
-wird eine Spannung an den Kondensator angelegt, welche in einem Bereich von $\qty{175}{\volt}$ und $\qty{225}{\volt}$ liegen sollte. Bevor die Messung beginnt sollte die 
-Lufttemperatur im Kondensator bestimmt werden. Nun wird eine kleine Menge Öl in den Kondensator gesprizt. Dabei sollte das Feld abgeschaltet werden. Dies kann über den 
-angeschlossenen Schalter geschehen, über welchen auf die Feldlinienrichtung kontrolliert werden kann. Wurde zu viel Öl in den Kondensator gesprizt ist die Beobachtung 
+Vor der Messung muss sichergestellt werden, dass die Messaparatur waagerecht ausgerichtet ist, um ungewünschte Abweichungen zu vermeiden. Es 
+wird eine Spannung an den Kondensator angelegt, welche in einem Bereich von $\qty{175}{\volt}$ und $\qty{275}{\volt}$ liegen sollte. Bevor die Messung beginnt sollte die 
+Lufttemperatur im Kondensator bestimmt werden, was über den Thermowiderstand vollzogen werden kann. Nun wird eine kleine Menge Öl in den Kondensator gesprizt. 
+Dabei sollte das Feld abgeschaltet werden. Dies kann über den 
+angeschlossenen Schalter geschehen, über welchen ebenfalls die Polung der Kondensatorplatten eingestellt werden kann. Wurde zu viel Öl in den Kondensator gesprizt ist die Beobachtung 
 schwieriger. Daher sollte in diesem Fall das Öl abgelassen werden und nach fünf-minütiger Wartezeit erneut Öl eingeführt werden. 
 
-Nun wird überprüft, ob sich geeignete Öltröpfchen im Kondensator befinden. Dafür wird die Bewegung der Öltröpfchen beobachtet. Bewegen sie sich in einer Angebrachten 
+Nun wird überprüft, ob sich geeignete Öltröpfchen im Kondensator befinden. Dafür wird die Bewegung der Öltröpfchen beobachtet. Bewegen diese sich in einer mäßigen 
 Geschwindigkeit war die Injektion erfolgreich und die Messung kann beginnen. Sollte dies nicht der Fall sein, können die Öltröpfchen über den bereits erwähnten 
-$\alpha$-Strahler ionisiert werden, damit die Messung beginnen kann. 
+$\alpha$-Strahler ionisiert werden.
 
-Das Magnetfeld wird nun angeschaltet. Dabei wird die Zeit gemessen, in welcher sich der beobachtete Tropfen um eine bestimmt Strecke fortbewegt. Daraus kann eine Geschwindigkeit
-berechnet werden. Dann wird das Feld umgepolt und es wird erneut eine Geschwindigkeit über dieselbe Methode gemessen. Diese beiden Geschwindigkeiten wurden in Abschnitt \ref{HIER SOLL MAN THEORIE KAKA HIN BRATAN DIGAAAAAA}
-beschrieben. Pro Tröpfchen sollen die Geschwindigkeiten jeweils drei mal gemessen werden. Außerdem muss eine \textit{Ruhegeschwindigkeit} $v_0$ bestimmt werden. Dazu wird ein 
-Öltröpfchen in eine gut beobachtbare Position gebracht und das Magnetfeld ausgeschaltet. Dann wird beobachtet, ob sich der Tröpfen bewegt. Falls das geschieht wird auch hier 
-eine Geschwindigkeit gemessen. Zu einer eingestellten Spannung des Kondensators soll diese Messung für fünf Tröpfchen erfolgen. Außerdem soll diese Gesamtmessung für fünf 
-verschiedene Spannungen erfolgen. Dabei ist zu beachten, dass die Temperatur während der Messung mehrmals notiert werden sollte, falls sich die Temperatur ändert. 
+Das $\vec{E}$-Feld wird nun angeschaltet. Es wird die Zeit gemessen, in welcher sich der beobachtete Tropfen um eine bestimmt Strecke fortbewegt. Daraus kann eine Geschwindigkeit
+berechnet werden. Anschließend wird das Feld umgepolt und es wird erneut eine Geschwindigkeit über dieselbe Methode gemessen. Die beiden Geschwindigkeiten entsprechen den 
+Geschwindigkeiten $v_\text{auf}$ und $v_\text{ab}$, welche in \autoref{sec:Theorie} beschrieben wurden. 
+Pro Tröpfchen werden beide Geschwindigkeiten jeweils drei mal gemessen. Des Weiteren wird die Gleichgewichtsgeschwindigkeit $v_0$ bei abgeschalteten 
+$\vec{E}$-Feld bestimmt. Zu einer eingestellten Spannung des Kondensators wird diese Messung für fünf Tröpfchen durchgeführt. 
+Es wird bei fünf verschiedenen Spannungen gemessen. Dabei ist zu beachten, dass die Temperatur während der Messung mehrmals notiert werden sollte, da diese sich im Verlauf
+des Versuches ändern kann.
