:cow2: Iwas in der plot gemacht, ich weiß auch nicht mehr wtf

--- a/v503/content/theorie.tex
+++ b/v503/content/theorie.tex
@@ -63,7 +63,7 @@ Aus diesen beiden Gleichungen kann die Ladung $q$ des Öltröpfchen zu
 wobei $E$ der Betrag des elektrischen Feldes ist. Für die Geschwindigkeiten folgt der Zusammenhang
 \begin{equation}
     \label{eqn:v_0}
-    v_0 = v_\text{ab} - v_\text{auf}.
+    2v_0 = v_\text{ab} - v_\text{auf}.
 \end{equation}    
 Da die Tröpfchen in diesem Versuch kleiner sind als die mittlere freie Weglänge $\overline{l}$ in Luft, gilt die das Stokesche Reibungsgesetzt nicht in der genannten Form.
 Um dies zu korrigieren muss eine effektive Viskosität der Luft über den \textit{Cunningham-Korrekturterm}
