mein lebenswille schwindet

--- a/v503/content/anhang.tex
+++ b/v503/content/anhang.tex
@@ -3,14 +3,28 @@
 \Large\textbf{Anhang}
 
 
+%\begin{figure}
+%    \centering
+%    \includepdf[page= 1, scale=0.75]{content/MessdatenVXXX.pdf}
+%\end{figure}
+%
+%\newpage
+%
+%\begin{figure}
+%    \centering
+%    \includepdf[page= 2, scale=0.75]{content/MessdatenVXXX.pdf}
+%\end{figure}
+
 \begin{figure}
     \centering
-    \includepdf[page= 1, scale=0.75]{content/MessdatenVXXX.pdf}
+    \includegraphics{content/Thermowiderstand.PNG}
+    \caption{In dieser Grafik wird die Luftviskosität in Abhängigkeit von der Lufttemperatur angegeben. \cite{v503}}
+    \label{fig:viskosität}
 \end{figure}
 
-\newpage
-
 \begin{figure}
     \centering
-    \includepdf[page= 2, scale=0.75]{content/MessdatenVXXX.pdf}
+    \includegraphics{content/Thermowiderstando.PNG}
+    \caption{In dieser Grafik wird die Lufttemperatur in Abhängigkeit des Thermowiderstandes dargestellt. \cite{v503}}
+    \label{fig:Temperatur}
 \end{figure}
