--- a/v503/content/theorie.tex
+++ b/v503/content/theorie.tex
@@ -23,10 +23,10 @@ berechnet werden. Das Teilchen hat die Masse $m$, $\vec{g}$ ist die Fallbeschleu
 Viskosität der Luft und $r$ der Radius des Teilchens.
 Nach kurzer Zeit stellt sich ein Kräftegleichgewicht ein, wodurch sich die Tröpfchen dann mit einer konstanten Geschwindigkeit bewegen.
 Bei abgeschalteten elektrischen Feld bewegen sich die Öltröpfchen dann mit der Geschwindigkeit $v_0$ und erhalten durch den Auftrieb der Luft den Radius
-\begin{equation*}
+\begin{equation}
     \label{eqn:Radius}
     r = \sqrt{\frac{9 \eta_\text{L}v_0}{2g(\rho_\text{Oel}- \rho_\text{L})}}.
-\end{equation*}
+\end{equation}
 Das Kräftegleichgewicht führt in diesem Fall zu der Gleichung
 \begin{equation*}
     \frac{4\symup{\pi}}{3}r^3(\rho_\text{Oel}- \rho_\text{L})g = 6 \symup{\pi} \eta_\text{L}r v_0.
