Endlich fertig der Mist (hoffe ich)

--- a/v503/content/anhang.tex
+++ b/v503/content/anhang.tex
@@ -17,14 +17,14 @@
 
 \begin{figure}
     \centering
-    \includegraphics{content/Thermowiderstand.PNG}
+    \includegraphics[width = 0.7\textwidth]{content/Viskosität.PNG}
     \caption{In dieser Grafik wird die Luftviskosität in Abhängigkeit von der Lufttemperatur angegeben. \cite{v503}}
     \label{fig:viskosität}
 \end{figure}
 
 \begin{figure}
     \centering
-    \includegraphics{content/Thermowiderstando.PNG}
-    \caption{In dieser Grafik wird die Lufttemperatur in Abhängigkeit des Thermowiderstandes dargestellt. \cite{v503}}
+    \includegraphics[width = 0.6\textwidth]{content/Thermowiderstand.PNG}
+    \caption{Tabelle mit zur Bestimmung der Lufttemperatur in Abhängigkeit des Thermowiderstandes. \cite{v503}}
     \label{fig:Temperatur}
 \end{figure}
