--- a/v503/content/diskussion.tex
+++ b/v503/content/diskussion.tex
@@ -1,2 +1,18 @@
 \section{Diskussion}
 \label{sec:Diskussion}
+Die experimentellen Werte der Elementarladungen aus korrigierten und unkorregierten Ladungen wurden in \autoref{sec:Auswertung} zu 
+$e_0 = \qty{1.155(0.348)e-19}{\coulomb}$ und $e_{0 \text{, korr.}} = \qty{1.742(0.361)e-19}{\coulomb}$ bestimmt. Dies entspricht einer
+relativen Abweichung zum Theoriewert $e = \qty{1.602e-19}{\coulomb}$ \cite{Ingenieurwissen} gemäß \autoref{eqn:Delta_rel} von $\symup{\Delta}(e_0) = \qty{27.9}{\percent}$ und 
+$\symup{\Delta}(e_{0 \text{korr.}}) = \qty{8.75}{\percent}$. Es wird deutlich, dass die Rechnung mit korrigierten Ladungen zu einem weitaus besseren Ergebnis führt. 
+Da der Literaturwert der Elementarladung sogar im Messunischerheits-Bereich des experimentell bestimmten Wertes liegt, zeigt sich, dass die Bestimmung mithilfe der 
+Milikan-Methode erfolgreich war. Die verhältnismäßig große Unsicherheit des Wertes von $\qty{0.361e-19}{\coulomb}$ ensteht auf Grund der Fehlerfortpflanzung durch
+die zahlreichen Berechnungen und auf Grund der Abweichungen in der Geschwindigkeitsmessung der Tröpfchen. Bei der Messung der Geschwindigkeiten ergaben sich einige
+Schwierigkeiten, da selbst bei guter Kalibrierung der Messaparatur die meisten Tröpfchen nicht ausreichend gut zu sehen sind, kein gewünschtes Verhalten aufweisen 
+oder nach einiger Zeit in der Unschärfe des Mikroskops verschwinden. Des Weiteren bewegen sich die Öltröpfchen nicht nur vertikal, was die Abweichungen verstärkt.
+
+Die Advogradokonstante konnte mit dem experimentellen Wert zu $N_\text{A, exp} = \qty{5.5374(1.1469)e23}{\per\mol}$ bestimmt werden, was eine relative Abweichung
+von $\qty{8.05}{\percent}$ darstellt. Die hier zu benennenden Fehlerquellen sind die Gleichen wie die oben Genannten, da die Advogradokonstante aus der
+experimentell bestimmten Elementarladung folgt.
+
+Insgesamt ergeben sich trotz der hohen Schwierigkeit des Experiments Werte, die im Rahmen der Unsicherheiten in einem akzeptablen Bereich um die Literaturwerte
+liegen.
