--- a/v503/content/theorie.tex
+++ b/v503/content/theorie.tex
@@ -37,20 +37,20 @@ Die Orientierung der Kräfte kann \autoref{fig:Kraeftegleichgewicht} entnommen w
 \begin{figure}
     \centering
     \includegraphics[width = .9\textwidth]{content/Kräftegleichgewicht.jpg}
-    \label{fig:Kraeftegleichgewicht}
     \caption{Orientierung der wirkenden Kräfte bei unterschiedlicher Polung des elektrischen Feldes. \cite{v503}}
+    \label{fig:Kraeftegleichgewicht}
 \end{figure}
 
 Wenn die obere Platte des Kondensators positiv geladen ist und eine ausreichend große Spannung anliegt, bewegt sich das Öltröpfchen mit der Geschwindigkeit $v_\text{auf}$
 nach oben. 
 Es folgt das Kräftegleichgewicht
 \begin{equation*}
-    \label{eqn:Kraefte_v_auf}
+    \label{eqn:Kraefte_1}
     \frac{4\symup{\pi}}{3}r^3(\rho_\text{Oel} + \rho_\text{L})g + 6 \symup{\pi} \eta_\text{L}r v_\text{auf} = qE.
 \end{equation*}
 Bei entgegengesetzter Polung ergibt sich 
 \begin{equation*}
-    \label{eqn:Kraefte_v_auf}
+    \label{eqn:Kraefte_2}
     \frac{4\symup{\pi}}{3}r^3(\rho_\text{Oel}- \rho_\text{L})g - 6 \symup{\pi} \eta_\text{L}r v_ab = -qE.
 \end{equation*}
 mit der nach unten gerichteten Geschwindigkeit $v_\text{ab}$.
