so alda du hast echt krasse arbeit geleistet breeeee skrsrk ABUSCHAKA

--- a/v503/content/auswertung.tex
+++ b/v503/content/auswertung.tex
@@ -66,10 +66,10 @@ Thermowiderstand mithilfe der Tabelle \ref{fig:Temperatur} bestimmmt werden. Die
 und die Dichte des Öls beträgt $\qty{886}{\kilo\gram\per\cubic\metre}$ \cite{v503}. Die relevanten Geschwindigkeiten können der oben aufgeführten \autoref{tab:Geschwindigkeiten}
 entnommen werden. Die ermittelten Radien sind \autoref{tab:Ladungen} zu entnehmen. 
 
-Zur Bestimmung der Ladungen der Öltröpfchen wird \autoref{eqn:q} verwendetr.
+Zur Bestimmung der Ladungen der Öltröpfchen wird \autoref{eqn:q} verwendet.
 Der Betrag des elektrischen Feldes des Plattenkondensators kann über den Zusammenhang $E = U/d$ berechnet werden. Der Abstand der Platten beträgt $d = \qty{7.6250(0.0051)}{\milli\metre}$.
 Die verwendeten Spannungen für die Teilchen können ebenfalls \autoref{tab:Geschwindigkeiten} entnommen werden. Die berechneten,
-aber noch unkorregierten, Ladungen sind in \autoref{tab:Ladungen} dargestellt. Die korrigierte Ladung berechnet sich nach \autoref{eqn:q_korrigiert} und ist ebenfalls In
+aber noch unkorregierten, Ladungen sind in \autoref{tab:Ladungen} dargestellt. Die korrigierte Ladung berechnet sich nach \autoref{eqn:q_korrigiert} und ist ebenfalls in
 \autoref{tab:Ladungen} zu finden.
 
 \begin{table}
@@ -149,10 +149,10 @@ gemittelt um einen experimentellen Wert aus allen Messreihen zu erhalten. Die Zw
       \bottomrule
     \end{tabular}
   \end{table}
-Die experimentell bestimmten Mittelwerte lauten mit Fehler $e_0 = \qty{1.155(0.348)e-19}{\coulomb}$ und $e_{0 \text{, korr.}} = \qty{1.742(0.361)e-19}{\coulomb}$. 
+Die experimentell bestimmten Mittelwerte lauten $e_0 = \qty{1.155(0.348)e-19}{\coulomb}$ und $e_{0 \text{, korr.}} = \qty{1.742(0.361)e-19}{\coulomb}$. 
 \subsection{Berechnung der Advogradokonstante}
 \label{subsec:Avogadro}
-Die Advogradokonstante gibt an wie viele Teilchen eines einer chemischen Verbindung in einem $\unit{\mol}$ enthalten sind.
+Die Advogradokonstante gibt an wie viele Teilchen einer chemischen Verbindung in einem $\unit{\mol}$ enthalten sind.
 Sie lässt sich mithilfe der \textit{Faraday-Konstante} $F$ und der Elementarladung durch
 \begin{equation*}
     \label{eqn:N_A}
