--- a/v503/content/theorie.tex
+++ b/v503/content/theorie.tex
@@ -51,7 +51,7 @@ Es folgt das Kräftegleichgewicht
 Bei entgegengesetzter Polung ergibt sich 
 \begin{equation*}
     \label{eqn:Kraefte_2}
-    \frac{4\symup{\pi}}{3}r^3(\rho_\text{Oel}- \rho_\text{L})g - 6 \symup{\pi} \eta_\text{L}r v_ab = -qE.
+    \frac{4\symup{\pi}}{3}r^3(\rho_\text{Oel}- \rho_\text{L})g - 6 \symup{\pi} \eta_\text{L}r v_{\text{ab}} = -qE.
 \end{equation*}
 mit der nach unten gerichteten Geschwindigkeit $v_\text{ab}$.
 
@@ -72,7 +72,7 @@ Um dies zu korrigieren muss eine effektive Viskosität der Luft über den \texti
     \eta_\text{eff} = \eta_\text{L} \left(\frac{1}{1 + B \frac{1}{pr}}\right)
 \end{equation}
 berechnet werden. Dazu wird der Luftdruck $p$ und die experimentell bestimmbare Konstante $B =  \num{6.17e-3}\, \text{Torr}\cdot\unit{\centi\metre}$ \cite{v503} verwendet.
-Es gilt $1\,\text{Torr} \approx \qty{133.322}{\pascal}$ \textbf{Quellenangabe maybe??}.
+Es gilt $1\,\text{Torr} \approx \qty{133.322}{\pascal}$ \cite{Ingenieurwissen}.
 Für die korrigierte Ladung gilt
 \begin{equation}
     \label{eqn:q_korrigiert}
